--- a/html/dic/book/1-2.html
+++ b/html/dic/book/1-2.html
@@ -7,85 +7,27 @@
 <html>
 	<head>
 		<title>Elements - Alpha by HTML5 UP</title>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
-	</head>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script type="text/javascript">
+      $(document).ready(function(){
+         $("#header").load("header.html #nav")
+      });
+</script>    
+ </head>
 	<body>
 	
 		<div id="page-wrapper">
 
 				<!-- Header-->		
-
-				<header id="header">
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="#" class="icon fa-angle-down">목차</a>
-<ul>
-	<li><a href="#">1. 총론</a>
-		<ul>
-			<li><a href="#">1.1. 문법</a>
-				<ul>
-					<li><a href="1-1-1.html">1.1.1.개념</a></li>
-					<li><a href="1-1-2.html">1.1.2.활용</a></li>
-					<li><a href="1-1-3.html">1.1.3. 언어학Three</a></li>
-					<li><a href="1-1-4.html">1.1.4. 국어학Four</a></li>
-				</ul>
-			</li>
-			<li><a href="1-2.html">1.2. 한국어</a>
-				<ul>
-					<li><a href="#">1.1.개념</a></li>
-					<li><a href="#">1.2.범위</a></li>
-					<li><a href="#">1.3. 비교언어학Three</a></li>
-					<li><a href="#">1.4. 계통Four</a></li>
-				</ul>
-			</li>
-			<li><a href="#">1.3. 기타 단일 항목</a></li>
-		</ul>
-	</li>
-	<li><a href="#">2. 문장</a>
-		<ul>
-			<li><a href="#">2.1. 문장 성분</a>
-				<ul>
-					<li><a href="#">2.1.개념</a></li>
-					<li><a href="#">2.2.주성분</a></li>
-					<li><a href="#">2.3. 부속성분</a></li>
-					<li><a href="#">1.4. 독립성분</a></li>
-				</ul>		
-			</li>
-			<li><a href="#">2.2.문장 확장</a>
-				<ul>
-					<li><a href="#">2.2.연결</a></li>
-					<li><a href="#">2.2.내포</a>
-						<ul>
-							<li><a href="#">2.2.1.품사절</a></li>
-							<li><a href="#">2.2.1.성분절</a></li>
-						</ul>
-					</li>
-				</ul>		
-			</li>
-		</ul>
- </li>
-	<li><a href="#">3. 담화</a></li>
-	<li><a href="#">4. 형태</a>
-		<ul>
-			<li><a href="#">2.4.1.Option One</a></li>
-			<li><a href="#">Option Two</a></li>
-			<li><a href="#">Option Three</a></li>
-			<li><a href="#">Option Four</a></li>
-		</ul>
-	</li>
-</ul>
-							</li>
-						</ul>							
-					</nav>
-				</header>
-				
+    				<header id="header" class="header">				</header>
+    	
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
