--- a/html/dic/book/header.html
+++ b/html/dic/book/header.html
@@ -1,3 +1,4 @@
+													<header id="header">
 													<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -60,3 +61,4 @@
 							</li>
 						</ul>							
 					</nav>
+					</header>
