--- a/html/dic/book/1-2.html
+++ b/html/dic/book/1-2.html
@@ -137,4 +137,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="../assets/js/main.js"></script>
 </body>
+<script>
+    includeHTML();
+</script>
 </html>
