--- a/html/wa/index.html
+++ b/html/wa/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>모음 축약</title>
 <style type="text/css">
 body{
