--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -94,7 +94,7 @@
 								<p>&nbsp;&nbsp;생활지도의 출발점을 ‘학생의 이해’로 잡으면 여러 가지 장점이 있는데, 첫째, 학생이 ‘이해 받는다’는 기분이 들어서 마음이 열린다. 그러면 저절로 교사의 말을 잘 듣게 된다. 학생이 자신의 결심을 지속적으로 실천하는 것과는 조금 다른 문제이다. 둘째, 학생을 진심으로 이해하게 되면, 교사는 학생에게 외부의 규칙을 일방적으로 강요하지 않게 된다. ‘지각했다’라는 현상과 ‘지각하면 안 된다’는 규칙만 존재하는 이분법적 사고에서는 교사도 길을 잃기 쉽다. 학생을 제대로 이해하고 나면 ‘지각했다’라는 현상에 얽매이지 않고 다른 방식으로 학생의 성장을 도울 길을 찾게 된다.</p>
 								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해, "힘들어요." 하는 학생에게 "왜 힘드니?"라고 묻는 것은 적절하지 않다. "불안해요." 하는 학생에게 "왜 불안하니?"라고 묻는 것도 적절하지 않다. 아래 영상의 '불안해 하는 사람' 표정을 보자. 불안해 하는 사람에게 말 거는 옆 사람의 대응이 적절해 보이는지?</p>
 								<video src="./videos/00_nagasu.mp4"  poster="./images/nagasu.png" width="640" preload="metadata" controls="controls"></video>
-								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해 기초적인 수준의 상담 대화 기술을 응용하면 큰 도움이 된다. 이 아래의 이야기는 기초적인 수준의 상담 대화 기술을 실제로 어떻게 응용하는지에 관한 내용들이다.</p>
+								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해 기초적인 수준의 상담 대화 기술을 응용하면 큰 도움이 된다.  마음으로 학생을 이해한다고 해도 "대화 기술"이 부족하면 한계에 부딪힌다. 아래 만화를 보자.(오른쪽부터 왼쪽으로 읽음)</p>
 								<img src="images/001.png" alt="" /><br />
 								<img src="images/002.png" alt="" /><br />
 								<img src="images/003.png" alt="" /><br />
@@ -160,9 +160,9 @@
 										</tr>
 									</table>
 									<p>&nbsp;&nbsp;위는 문자 메시지 대화이다. 학생이 스승의 날 마치는 시간이 궁금해서 문자 보낸 게 아니다. 본심은 문과, 이과 결심에 대한 조언을 얻고 싶은데 그걸 갑자기 문자 보내서 “선생님 저 문과 갈까요, 이과 갈까요?” 하기에는 좀 민망하고, 죄송스럽고, 미안하고 해서 첫 마디를 저렇게 꺼낸 것이다. 그리고 교사가 (1) 사실 듣기와 (2) 기분 듣기를 반복하는 사이 학생은 스스로 결단을 내리게 된다.</p>
-									<video src="./videos/01_ai1.mp4" poster="./images/ai1.png" width="640" preload="metadata" controls="controls"></video>
+									<video src="./videos/01_ai1.mp4" poster="images/a1.png" width="640" preload="metadata" controls="controls"></video>
 									<p>&nbsp;&nbsp;위 영상 속의 아이도 "(1) 사실 듣기와 (2) 기분 듣기를 제대로 해 주면 아래와 같이 정상적인 반응을 보인다.</p>
-									<video src="./videos/02_ai2.mp4" poster="./images/ai2.png" width="640" preload="metadata" controls="controls"></video>
+									<video src="./videos/02_ai2.mp4" poster="images/a2.png" width="640" preload="metadata" controls="controls"></video>
 									<p>&nbsp;&nbsp;(1) 사실 듣기도 중요하지만 가장 중요한 것은 (2) 기분 듣기이다. 학생의 본심/욕구로 도달하는 길을 찾는 열쇠가 바로 ‘감정/기분’이기 때문이다. 청소년의 뇌를 ‘파충류의 뇌’라고 하면서 청소년의 심리를 이해하려는 정신과 의사들의 강연이나 책을 볼 수 있는데, 파충류의 뇌를 가진 청소년을 영장류의 뇌를 가진 청소년으로 간단히 바꿀 수 있다. 다음 예를 보자.</p>
 									<table>
 											<tr>
